components/garage-app/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-s3
  labels:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.synlo.duckdns.org`)
      kind: Rule
      services:
        - name: garage
          port: 3900
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-ui
  labels:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
  annotations:
    gethomepage.dev/href: "https://garage-ui.omv-loki.vikaspogu.internal"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/garage.png
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`garage-ui.omv-loki.vikaspogu.internal`)
      kind: Rule
      services:
        - name: garage
          port: 3909
  tls: {}
